# liquidhaskell

./: .gitignore  .travis.yml  Liquid.hs  liquidhaskell-core.cabal  liquidhaskell.cabal  unionfs  unionfsctl
benchmarks/gsoc15/crash/: test1.hs
benchmarks/gsoc15/neg/: test0.hs  test1.hs  test10.hs  test11.hs  test12.hs  test2.hs  test2_1.hs  test3.hs  test4.hs  test5.hs  test6.hs  test7.hs  test8.hs  test9.hs
benchmarks/gsoc15/pos/: test0.hs  test1.hs  test10.hs  test11.hs  test12.hs  test2.hs  test3.hs  test4.hs  test5.hs  test6.hs  test7.hs  test9.hs
benchmarks/gsoc15/todo/: test4.hs
benchmarks/text-0.11.2.3/Data/Text/Fusion/: Common.hs  Internal.hs
include/: NotReal.spec  Prelude.spec  Real.spec
include/Control/: Exception.spec
include/Data/: List.spec  Vector.spec
include/Data/Text/: Fusion.spec
include/Foreign/: ForeignPtr.spec  Storable.spec
include/Foreign/C/: String.spec
include/GHC/: Base.spec  Classes.spec  List.spec  Read.spec  Types.spec
include/Language/Haskell/Liquid/: Foreign.hs
scripts/: travis
src/: LiquidHaskell.hs  LiquidHaskell_.hs
src/Language/Haskell/Liquid/: Bare.hs  Bounds.hs  Cabal.hs  CmdLine.hs  Constraint.hs  CoreToLogic.hs  DiffCheck.hs  Driver.hs  Errors.hs  GhcInterface.hs  GhcMisc.hs  HsExprToLogic.hs  Iface.hs  Interface.hs  Literals.hs  Measure.hs  Misc.hs  Parse.hs  Pipeline.hs  Plugin.hs  PredType.hs  PrettyPrint.hs  Qualifier.hs  RefType.hs  Serialize.hs  Spec.hs  TH.hs  Types.hs  Variance.hs  WiredIn.hs
src/Language/Haskell/Liquid/Bare/: Check.hs  DataType.hs  Env.hs  GhcSpec.hs  Lookup.hs  Measure.hs  Misc.hs  OfType.hs  Plugged.hs  RTEnv.hs  Resolve.hs  Sort.hs  Spec.hs  Symbols.hs  Type.hs
src/Language/Haskell/Liquid/Bare/Type/: Alias.hs  Expand.hs  Transform.hs
src/Language/Haskell/Liquid/Constraint/: CTags.hs  Constraint.hs  Generate.hs  ToFixpoint.hs  Types.hs
src/Language/Haskell/Liquid/Iface/: Binary.hs  Convert.hs  File.hs  Ghc.hs  Types.hs
src/Language/Haskell/Liquid/Pipeline/: ACSS.hs  ANFTransform.hs  Annotate.hs  Ghc.hs  Rewrite.hs  TransformRec.hs  Verify.hs
src/Language/Haskell/Liquid/Plugin/: Config.hs  Driver.hs  Ghc.hs  Misc.hs
src/Language/Haskell/Liquid/Spec/: Check.hs  CoreToLogic.hs  Env.hs  Expand.hs  Extract.hs  Lookup.hs  Reify.hs  Resolve.hs  WiredIns.hs
src/Language/Haskell/Liquid/TH/: Encode.hs  Magic.hs  Misc.hs  Parse.hs  Simplify.hs  Types.hs  WiredIns.hs
src/Language/Haskell/Liquid/TH/Parse/: Base.hs  Dec.hs  Logic.hs  Reft.hs  Type.hs
src/LiquidHaskell/: Cabal.hs  Plugin.hs
std/base-4.8.0.0/: Prelude.hsig
std/base-4.8.0.0/GHC/: Base.hsig
tests/: test.hs
tests/gsoc15/broken/pos/: Abs.hs  Goo.hs  Loo.hs  Map.hs  Map0.hs  Map2.hs  Term.hs  grty1.hs  grty2.hs  grty3.hs  ite1.hs  lit.hs  maps1.hs  test1.hs
tests/gsoc15/todo/pos/: PairMeasure.hs  Strings.hs
tests/gsoc15/unknown/pos/: AVL.hs  AVLRJ.hs  Ackermann.hs  AmortizedQueue.hs  Assume.hs  AssumedRecursive.hs  AutoSize.hs  Avg.hs  BST.hs  BST000.hs  Bar.hs  Class.hs  Class2.hs  ClassReg.hs  Coercion.hs  CompareConstraints.hs  Constraints.hs  ConstraintsAppend.hs  DataBase.hs  Eval.hs  Even.hs  Even0.hs  FFI.hs  Foo.hs  Fractional.hs  GCD.hs  GeneralizedTermination.hs  GhcListSort.hs  GhcSort1.hs  GhcSort2.hs  GhcSort3.T.hs  GhcSort3.hs  Graph.hs  HasElem.hs  HaskellMeasure.hs  HedgeUnion.hs  HigherOrderRecFun.hs  Holes.hs  IcfpDemo.hs  Infinity.hs  (+273 more)
tests/gsoc15/working/pos/: Abs.hs  MeasureContains.hs  Moo.hs  alias00.hs  alias01.hs  grty0.hs  ite.hs  ite1.hs  mapreduce.hs  meas0.hs  meas2.hs  test1.hs  zipW2  zipW2.hs
unionfs-fuse/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
unionfs-fuse/man/: Makefile  cmake_install.cmake
unionfs-fuse/src/: Makefile  cmake_install.cmake  cow_utils.c  findbranch.c  unionfs.c
