Name:                liquidhaskell-core
Version:             0.5.0.0
Copyright:           2010-15 Ranjit Jhala, University of California, San Diego.
build-type:          Simple
Synopsis:            Liquid Types for Haskell
Description:         Liquid Types for Haskell.
Homepage:            http://goto.ucsd.edu/liquidhaskell
License:             BSD3
License-file:        LICENSE
Author:              Ranjit Jhala, Niki Vazou, Eric Seidel
Maintainer:          Ranjit Jhala <jhala@cs.ucsd.edu>
Category:            Language
Build-Type:          Simple
Cabal-version:       >=1.18

data-files: include/*.hquals
          , include/*.hs
          , include/*.spec
          , include/CoreToLogic.lg
          , include/Control/*.spec
          , include/Data/*.hquals
          , include/Data/*.spec
          , include/Data/Text/*.spec
          , include/Data/Text/Fusion/*.spec
          , include/Data/Text/Lazy/*.spec
          , include/Foreign/*.spec
          , include/Foreign/C/*.spec
          , include/Foreign/Marshal/*.spec
          , include/GHC/*.hquals
          , include/GHC/*.spec
          , include/GHC/IO/*.spec
          , include/Language/Haskell/Liquid/*.hs
          , include/Language/Haskell/Liquid/*.pred
          , include/System/*.spec
          , syntax/liquid.css

extra-source-files: tests/pos/*.hs
                  , tests/neg/*.hs
                  , tests/crash/*.hs

Source-Repository head
  Type:        git
  Location:    https://github.com/ucsd-progsys/liquidhaskell/

Flag devel
  Description: turn on stricter error reporting for development
  Default:     False
  Manual:      True

Flag include
  Description: use in-tree include directory
  Default:     False

Library
   Default-Language: Haskell98
   Build-Depends: base
                , ghc>=7.8.3
                , template-haskell
                , time
                , array
                , hpc
                , cmdargs
                , containers
                , data-default
                , deepseq
                , directory
                , Diff
                , filepath
                , hscolour
                , mtl
                , parsec
                , pretty
                , process >= 1.2
                , text
                , hashable
                , unordered-containers
                , liquid-fixpoint >= 0.3
                , aeson
                , bytestring
                , fingertree
                , Cabal >= 1.18

   hs-source-dirs:  src, include

   Exposed-Modules: Language.Haskell.Liquid.Prelude,
                    Language.Haskell.Liquid.Foreign,
                    Language.Haskell.Liquid.List,
                    Language.Haskell.Liquid.PrettyPrint,
                    Language.Haskell.Liquid.Measure,
                    Language.Haskell.Liquid.World,
                    Language.Haskell.Liquid.RefType,
                    Language.Haskell.Liquid.RefSplit,
                    Language.Haskell.Liquid.Errors,
                    Language.Haskell.Liquid.PredType,
                    Language.Haskell.Liquid.DiffCheck,
                    Language.Haskell.Liquid.GhcMisc,
                    Language.Haskell.Liquid.GhcPlay,
                    Language.Haskell.Liquid.Misc,
                    Language.Haskell.Liquid.Variance,
                    Language.Haskell.Liquid.Bounds,
                    Language.Haskell.Liquid.Dictionaries,
                    Language.Haskell.Liquid.Qualifier,
                    Language.Haskell.Liquid.Tidy,
                    Language.Haskell.Liquid.Types,
                    Language.Haskell.Liquid.Simplify,
                    Language.Haskell.Liquid.Literals,
                    Language.Haskell.Liquid.Strata,
                    Language.Haskell.Liquid.Fresh,
                    Language.Haskell.Liquid.Visitors,
                    Language.Haskell.Liquid.WiredIn,
                    Language.Haskell.Liquid.Names,
                    Language.Haskell.Liquid.Cabal,
                    Language.Haskell.Liquid.Parse,
                    Paths_liquidhaskell_core,

                    Language.Haskell.Liquid.Constraint
                    Language.Haskell.Liquid.Constraint.Constraint,
                    Language.Haskell.Liquid.Constraint.CTags,
                    Language.Haskell.Liquid.Constraint.Generate,
                    Language.Haskell.Liquid.Constraint.ToFixpoint,
                    Language.Haskell.Liquid.Constraint.Types,

                    Language.Haskell.Liquid.Iface,
                    Language.Haskell.Liquid.Iface.Binary,
                    Language.Haskell.Liquid.Iface.Convert,
                    Language.Haskell.Liquid.Iface.File,
                    Language.Haskell.Liquid.Iface.Ghc,
                    Language.Haskell.Liquid.Iface.Types,

                    Language.Haskell.Liquid.Pipeline,
                    Language.Haskell.Liquid.Pipeline.ACSS,
                    Language.Haskell.Liquid.Pipeline.ANFTransform,
                    Language.Haskell.Liquid.Pipeline.Annotate,
                    Language.Haskell.Liquid.Pipeline.Ghc,
                    Language.Haskell.Liquid.Pipeline.Rewrite,
                    Language.Haskell.Liquid.Pipeline.TransformRec,
                    Language.Haskell.Liquid.Pipeline.Verify,

                    Language.Haskell.Liquid.Plugin,
                    Language.Haskell.Liquid.Plugin.Config,
                    Language.Haskell.Liquid.Plugin.Driver,
                    Language.Haskell.Liquid.Plugin.Misc,

                    Language.Haskell.Liquid.Spec,
                    Language.Haskell.Liquid.Spec.Check,
                    Language.Haskell.Liquid.Spec.CoreToLogic,
                    Language.Haskell.Liquid.Spec.Expand,
                    Language.Haskell.Liquid.Spec.Extract,
                    Language.Haskell.Liquid.Spec.Lookup,
                    Language.Haskell.Liquid.Spec.Reify,
                    Language.Haskell.Liquid.Spec.Resolve,

                    Language.Haskell.Liquid.TH,
                    Language.Haskell.Liquid.TH.Magic,
                    Language.Haskell.Liquid.TH.Misc,
                    Language.Haskell.Liquid.TH.Parse,
                    Language.Haskell.Liquid.TH.Parse.Base,
                    Language.Haskell.Liquid.TH.Parse.Dec,
                    Language.Haskell.Liquid.TH.Parse.Logic,
                    Language.Haskell.Liquid.TH.Parse.Type,
                    Language.Haskell.Liquid.TH.Simplify,
                    Language.Haskell.Liquid.TH.Types,
                    Language.Haskell.Liquid.TH.WiredIns,

                    LiquidHaskell,
                    LiquidHaskell_,
                    LiquidHaskell.Cabal,
                    LiquidHaskell.Plugin

   if impl(ghc < 7.10)
     exposed-modules:
                    --NOTE: these need to be exposed so GHC generates .dyn_o files for them..
                    Language.Haskell.Liquid.Desugar.Check,
                    Language.Haskell.Liquid.Desugar.Coverage,
                    Language.Haskell.Liquid.Desugar.Desugar,
                    Language.Haskell.Liquid.Desugar.DsArrows,
                    Language.Haskell.Liquid.Desugar.DsBinds,
                    Language.Haskell.Liquid.Desugar.DsExpr,
                    Language.Haskell.Liquid.Desugar.DsForeign,
                    Language.Haskell.Liquid.Desugar.DsGRHSs,
                    Language.Haskell.Liquid.Desugar.DsListComp,
                    Language.Haskell.Liquid.Desugar.DsMeta,
                    Language.Haskell.Liquid.Desugar.DsUtils,
                    Language.Haskell.Liquid.Desugar.HscMain,
                    Language.Haskell.Liquid.Desugar.Match,
                    Language.Haskell.Liquid.Desugar.MatchCon,
                    Language.Haskell.Liquid.Desugar.MatchLit
   else
     exposed-modules:
                    --NOTE: these need to be exposed so GHC generates .dyn_o files for them..
                    Language.Haskell.Liquid.Desugar710.Check,
                    Language.Haskell.Liquid.Desugar710.Coverage,
                    Language.Haskell.Liquid.Desugar710.Desugar,
                    Language.Haskell.Liquid.Desugar710.DsArrows,
                    Language.Haskell.Liquid.Desugar710.DsBinds,
                    Language.Haskell.Liquid.Desugar710.DsCCall,
                    Language.Haskell.Liquid.Desugar710.DsExpr,
                    Language.Haskell.Liquid.Desugar710.DsForeign,
                    Language.Haskell.Liquid.Desugar710.DsGRHSs,
                    Language.Haskell.Liquid.Desugar710.DsListComp,
                    Language.Haskell.Liquid.Desugar710.DsMeta,
                    Language.Haskell.Liquid.Desugar710.DsUtils,
                    Language.Haskell.Liquid.Desugar710.HscMain,
                    Language.Haskell.Liquid.Desugar710.Match,
                    Language.Haskell.Liquid.Desugar710.MatchCon,
                    Language.Haskell.Liquid.Desugar710.MatchLit
   ghc-options: -W -fno-warn-unused-imports -fno-warn-dodgy-imports -fno-warn-deprecated-flags -fno-warn-deprecations
   if flag(devel)
     ghc-options: -Werror
   if flag(include)
     hs-source-dirs: devel
   ghc-prof-options: -fprof-auto
   Default-Extensions: PatternGuards

test-suite test
  default-language: Haskell98
  type:              exitcode-stdio-1.0
  hs-source-dirs:    tests
  ghc-options:       -O2 -threaded
  main-is:           test.hs
  build-depends:     base,
                     liquidhaskell,
                     containers,
                     directory,
                     filepath,
                     mtl,
                     process,
                     optparse-applicative == 0.11.*,
                     stm,
                     tagged,
                     tasty >= 0.10,
                     tasty-hunit >= 0.9,
                     tasty-rerun >= 1.1,
                     transformers

